<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:orientation="vertical" android:weightSum="100">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/tv_main_title"
            android:fontFamily="@font/permanent_marker"
            android:layout_weight="50"
            android:textSize="36sp"
            android:text="@string/app_name"
            android:gravity="bottom|center"
            android:textAllCaps="true"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:gravity="center">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_new_game"
                android:background="@drawable/btn_background_blue"
                android:text="@string/btn_new_game"
                android:fontFamily="@font/open_sans_semibold"
                android:textSize="14sp"
                android:padding="15dp"
                style="@style/Widget.AppCompat.Button.Borderless" android:textAllCaps="true"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_continue_game"
                android:background="@drawable/btn_background_pink"
                android:text="@string/btn_continue_game"
                android:fontFamily="@font/open_sans_semibold"
                android:textSize="14sp"
                android:padding="15dp"
                android:layout_marginStart="15dp"
                style="@style/Widget.AppCompat.Button.Borderless" android:visibility="gone"/>
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/tv_main_credits"
            android:text="@string/main_credits"
            android:fontFamily="@font/open_sans"
            android:layout_weight="33"
            android:textSize="12sp"
            android:gravity="bottom|center"
            android:textAllCaps="false" android:autoLink="web" android:clickable="true" android:focusable="true"/>

</LinearLayout>